# riscv-jit-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: config.h  dummy.txt  loader.c  loader.h  main.c  riscv.h
src/core/: cpu.c  cpu.h  csr.c  csr.h  decode.c  decode.h  dispatcher.c  dispatcher.h  interpreter.c  interpreter.h  mmu.c  mmu.h  tlb.c  tlb.h  trap.c  trap.h
src/isa/: lsu.c  lsu.h  sfence.c  sfence.h
src/platform/: ram.c  ram.h
tests/: Makefile
tests/a_01/a01_1/01_bin_basic/: Makefile  link.ld  stub.S
tests/a_01/a01_1/02_elf_basic/: Makefile  link.ld  stub.S
tests/a_01/a01_1/03_elf_multi_seg/: Makefile  link.ld  stub.S
tests/a_01/a01_1/04_elf_class64_reject/: Makefile  link.ld  stub.S
tests/a_01/a01_1/05_bin_oversize_reject/: Makefile
tests/a_01/a01_1/06_not_elf/: Makefile
tests/a_01/a01_1/07_tiny_file_reject/: Makefile
tests/a_01/a01_3/01_arith_basic/: Makefile  link.ld  stub.S
tests/a_01/a01_3/02_arith_compressed/: Makefile  link.ld  stub.S
tests/a_01/a01_4/01_branch_loop/: Makefile  link.ld  stub.S
tests/a_01/a01_4/02_jal_jalr_call/: Makefile  link.ld  stub.S
tests/a_01/a01_5/01_csr_basic/: Makefile  link.ld  stub.S
tests/a_01/a01_5/02_trap_arch_basic/: Makefile  link.ld  stub.S
tests/a_01/a01_5/03_csr_rw/: Makefile  link.ld  stub.S
tests/a_01/a01_5/04_trap_chain/: Makefile  link.ld  stub.S
tests/a_01/a01_5/05_triple_fault_halt/: Makefile  link.ld  stub.S
tests/a_01/a01_6/01_load_store_basic/: Makefile  link.ld  stub.S
tests/a_01/a01_6/02_load_misalign_reject/: Makefile  link.ld  stub.S
tests/a_01/a01_6/03_store_oor_reject/: Makefile  link.ld  stub.S
tests/a_01/a01_7/01_trap_priv_save_restore/: Makefile  link.ld  stub.S
tests/a_01/a01_7/02_u_mode_csr_priv_reject/: Makefile  link.ld  stub.S
tests/a_01/a01_7/03_csr_ro_write_reject/: Makefile  link.ld  stub.S
tests/a_01/a01_7/04_u_mode_ecall_chain/: Makefile  link.ld  stub.S
tests/a_01/a01_8/01_sret_m_s_u_chain/: Makefile  link.ld  stub.S
tests/a_01/a01_8/02_sv32_remote_fetch/: Makefile  link.ld  stub.S
tests/a_01/a01_8/03_msu_priv_chain/: Makefile  link.ld  stub.S
